Updated thesis template with content for chapters

--- a/Thesis/Latex/Cover_page.tex
+++ b/Thesis/Latex/Cover_page.tex
@@ -12,18 +12,18 @@
 	{\large Faculty of Exact Sciences} \\[0.2cm]
 	{\large Department of Computer Science} \\[0.2cm]
 	{\large Dissertation } \\[0.2cm]
-	{\ Submitted in partial fulfilment of the requirements for Doctorate degree in Computer Science} \\[0.2cm]
+	{\ Submitted in partial fulfilment of the requirements for Master degree in Computer Science} \\[0.2cm]
 	{\large Option: Artificial Intelligence}\\[0.5cm]
 	
     {\large Theme} \\[0.3cm]
 %\hline	
 %    \\[0.7cm]
-	{\LARGE {\textbf{Neural Machine Translation for\\ Arabic Media Content}}}
+	{\LARGE {\textbf{Enhancing Legal Information Access and \\ Reasoning  with  Retrieval-Augmented LLMs for Juridical Data}}}
 	\\[0.7cm]
 %\hline
 %	 \\[0.5cm]
 
-	{\large Presented by \textbf{Baligh BABAALI} }\\[0.5cm]
+	{\large Presented by \textbf{Boudjenane Zoubida Asmaa} }\\[0.5cm]
 
 \end{center}
 Jury:\\
@@ -38,5 +38,5 @@ Jury:\\
 \vfill
 \begin{center}
 	
-	\it{Month  2024}
+	\it{Month  2025}
 \end{center}
