--- a/Thesis/Latex/Introduction.tex
+++ b/Thesis/Latex/Introduction.tex
@@ -1,23 +1,10 @@
-\chapter{Introduction}
+%\chapter{Introduction}
 \pagestyle{fancy}\lhead{\textbf \footnotesize\it{Introduction}}
 \pagestyle{fancy}\chead{} \pagestyle{fancy}\rhead{}
-\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-MascaraComputer Science: 2024}}}
+\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-MascaraComputer Science: 2025}}}
 \pagestyle{fancy}\cfoot{} \pagestyle{fancy}\rfoot{\thepage}
 \pagenumbering{arabic}
-%\addcontentsline{toc}{chapter}{General introduction}
+\addcontentsline{toc}{chapter}{General introduction}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Here goes the Introduction.\\
-%%%\newpage
-\section{Problem Identification and Motivation}\label{start1}
-Context and Motivation
-\section{Objectives and Scope}
-Create Arabic MT
-no DS
 
-\section{Contributions}
-Create Corpus
-Create Seq2Seq
-Use ChatGPT
-Survey Arabic Corpora
-Survey Arabic MT
-\section{Outline of the Thesis}
+%%%\newpage
