--- a/Thesis/Latex/main.tex
+++ b/Thesis/Latex/main.tex
@@ -35,6 +35,7 @@
 
 \usepackage{arabtex}
 \usepackage{booktabs}
+\DeclareUnicodeCharacter{200B}{}
 
 \usepackage{longtable}
 \usepackage{amsfonts}
@@ -95,7 +96,7 @@
 	\pagestyle{fancy}\lhead{\textbf \footnotesize\it{List of Figures}} 
 	\pagestyle{fancy}\chead{} 
 	\pagestyle{fancy}\rhead{}
-	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}} 
+	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}} 
 	\pagestyle{fancy}\cfoot{} 
 	\pagestyle{fancy}\rfoot{}
 	\pagenumbering{gobble}
@@ -108,7 +109,7 @@
 	\pagestyle{fancy}\lhead{\textbf \footnotesize\it{List of Tables}} 
 	\pagestyle{fancy}\chead{} 
 	\pagestyle{fancy}\rhead{}
-	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}} 
+	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}} 
 	\pagestyle{fancy}\cfoot{} 
 	\pagestyle{fancy}\rfoot{}
 	\pagenumbering{gobble}
@@ -121,7 +122,7 @@
 	\pagestyle{fancy}\lhead{\textbf \footnotesize\it{List of Abbreviations}} 
 	\pagestyle{fancy}\chead{} 
 	\pagestyle{fancy}\rhead{}
-	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}} 
+	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}} 
 	\pagestyle{fancy}\cfoot{} 
 	\pagestyle{fancy}\rfoot{}
 	\pagenumbering{gobble} % To suppress numbering 
@@ -133,19 +134,19 @@
 	\input{Part_1}
 	\input{Chapter_2}
 	\input{Chapter_3} 
-	\input{Chapter_4}
-	\input{Part_2}
-	\input{Chapter_5}
-	\input{Chapter_6}
-	\input{Chapter_7}
-	\input{Conclusion}
+	%\input{Chapter_4}
+	%\input{Part_2}
+	%\input{Chapter_5}
+	%\input{Chapter_6}
+	%\input{Chapter_7}
+	%\input{Conclusion}
 	%%%%%%%%%%%%%%%%%%%%% For bibliography %%%%%%%%%%%%%%%%%%
 	\newpage
 	\nocite{*}
 	\bibliographystyle{unsrt}
 	\bibliography{Biblio}
 	\pagestyle{fancy}\lhead{\textbf \footnotesize\it{Bibliography}}
-	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2024}}}
+	\pagestyle{fancy}\lfoot{\textbf {\small\it{Univ-Mascara/Computer Science: 2025}}}
 	\pagenumbering{gobble} % To suppress numbering 
 	%\addcontentsline{toc}{chapter}{Bibliography}
 	%%%%%%%%%%%%%%%%%%%%% For appendices %%%%%%%%%%%%%%%%%%%
