--- a/Thesis/Latex/Abbreviations.tex
+++ b/Thesis/Latex/Abbreviations.tex
@@ -6,24 +6,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{tabular}{ll}
-	\textbf{BART}:& Bidirectional Auto-Regressive Transformers\\
+
 	\textbf{BERT}:& Bidirectional Encoder Representations from Transformers\\
-	\textbf{BLEU}:& Bilingual Evaluation Understudy\\
-	\textbf{BRNN}:& Bidirectional Recurrent Neural Network\\
-	\textbf{BT}:& Back Translation\\
+	\textbf{RAG} :& Retrieval-Augmented Generation\\
 	\textbf{FFN}:& Feed-Forward Network\\
 	\textbf{GPT}:& Generative Pre-trained Transformer\\
-	\textbf{GRU}:& Gated Recurrent Units\\
 	\textbf{LLM}:& Large Language Model\\
 	\textbf{LSTM}:& Long Short-Term Memory\\
 	\textbf{MT}:& Machine Translation\\
 	\textbf{NLG}:& Natural Language Generation\\
 	\textbf{NLP}:& Natural Language Processing\\
 	\textbf{NLU}:& Natural Language Understanding\\
-	\textbf{NMT}:& Neural Machine Translation\\
-	\textbf{RBMT}:& Rule-Based Machine Translation\\
 	\textbf{RNN}:& Recurrent Neural Network\\
 	\textbf{Seq2Seq}:& Sequence to Sequence\\
-	\textbf{SMT}:& Statistical Machine Translation\\
 	\textbf{T5}:& Text-to-Text Transfer Transformer\\
 \end{tabular}
