--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -1,56 +1,129 @@
 %% Journal article
-@article{bib1,
-  author		= "Campbell, S. L. and Gear, C. W.",
-  title			= "The index of general nonlinear {D}{A}{E}{S}",
-  journal		= "Numer. {M}ath.",
-  volume		= "72",
-  number		= "2",
-  pages			= "173--196",
-  year			= "1995"
+@article{vaswani2017attention,
+	title="Attention is All You Need",
+	author="Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia",
+	journal="arXiv preprint arXiv:1706.03762",
+	year="2017"
 }
 
-%% Journal article with DOI
-@article{bib2,
-  author		= "Slifka, M. K. and Whitton, J. L.",
-  title			= "Clinical implications of dysregulated cytokine production",
-  journal		= "J. {M}ol. {M}ed.",
-  volume		= "78",
-  pages			= "74--80",
-  year			= "2000",
-  doi			= "10.1007/s001090000086"
+@article{naveed2023comprehensive,
+	title="A Comprehensive Overview of Large Language Models",
+	author="Naveed, Humza and Khan, Asad Ullah and Qiu, Shi and Saqib, Muhammad and Anwar, Saeed and Usman, Muhammad and Akhtar, Naveed and Barnes, Nick and Mian, Ajmal",
+	journal="arXiv preprint arXiv:2307.06435",
+	year="2023"
 }
+
+@article{brown2020language,
+	title="Language Models are Few-Shot Learners",
+	author="Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others",
+	journal="Advances in Neural Information Processing Systems",
+	volume="33",
+	year="2020"
+}
+
+@article{devlin2018bert,
+	title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
+	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	journal={arXiv preprint arXiv:1810.04805},
+	year={2018}
+}
+
+@article{raffel2020exploring,
+	title={Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
+	author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
+	journal={Journal of Machine Learning Research},
+	volume={21},
+	number={140},
+	pages={1--67},
+	year={2020},
+	url={https://arxiv.org/abs/1910.10683}
+}
+
 
 %% Journal article
-@article{bib3,
-  author		= "Hamburger, C.",
-  title			= "Quasimonotonicity, regularity and duality for nonlinear systems of 
-					partial differential equations",
-  journal		= "Ann. Mat. Pura. Appl.",
-  volume		= "169",
-  number		= "2",
-  pages			= "321--354",
-  year			= "1995"
+@article{Mousavi2025,
+	author    = {Seyed Mahed Mousavi and Simone Alghisi and Giuseppe Riccardi},
+	title     = {LLMs as Repositories of Factual Knowledge: Limitations and Solutions},
+	journal   = {arXiv preprint},
+	volume    = {arXiv:2501.12774v1},
+	year      = {2025},
+	month     = {Jan},
+	url       = {https://arxiv.org/abs/2501.12774v1},
+	note      = {Available at: \url{https://arxiv.org/abs/2501.12774v1}}
 }
 
-%% book, authored
-@book{bib4,
-  author		= "Geddes, K. O. and Czapor, S. R. and Labahn, G.",
-  title			= "Algorithms for {C}omputer {A}lgebra",
-  address		= "Boston",
-  publisher		= "Kluwer",
-  year			= "1992"
+@article{Howard2018,
+	author    = {Jeremy Howard and Sebastian Ruder},
+	title     = {Universal Language Model Fine-tuning for Text Classification},
+	journal   = {arXiv preprint},
+	volume    = {arXiv:1801.06146v5},
+	year      = {2018},
+	month     = {May},
+	url       = {https://arxiv.org/abs/1801.06146v5},
+	note      = {Available at: \url{https://arxiv.org/abs/1801.06146v5}}
 }
+@article{zhuang2020comprehensive,
+	title={A Comprehensive Survey on Transfer Learning},
+	author={Zhuang, Fuzhen and Qi, Zhiyuan and Duan, Keyu and Xi, Dongbo and Zhu, Yongchun and Zhu, Hengshu and Xiong, Hui and He, Qing},
+	journal={Proceedings of the IEEE},
+	volume={109},
+	number={1},
+	pages={43--76},
+	year={2021},
+	publisher={IEEE}
+}
+
+@article{lewis2020retrieval,
+	title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
+	author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others},
+	journal={Advances in Neural Information Processing Systems},
+	volume={33},
+	pages={9459--9474},
+	year={2020}
+}
+
 
 %% Item 8. Book, chapter
-@incollection{bib5,
-  author		= "Broy, M.",
-  title			= "Software engineering---from auxiliary to key technologies",
-  editor		= "Broy, M. and Denert, E.",
-  booktitle		= "Software Pioneers",
-  pages			= "10--13",
-  address		= "New {Y}ork",
-  publisher		= "Springer",
-  year			= "1992"
+@inproceedings{karpukhin2020dpr,
+	title="Dense Passage Retrieval for Open-Domain Question Answering",
+	author="Karpukhin, Vladimir and Oguz, Barlas and Min, Sewon and Lewis, Patrick and Wu, Ledell and Edunov, Sergey and Chen, Danqi and Yih, Wen-tau",
+	booktitle="Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)",
+	pages="6769--6781",
+	year="2020",
+	organization="Association for Computational Linguistics",
+	address="online",
+	doi="10.18653/v1/2020.emnlp-main.550},
+	url={https://aclanthology.org/2020.emnlp-main.550"
+}
+
+@article{blended_rag2024,
+	author    = "Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki",
+	title     = "Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers",
+	journal   = "arXiv",
+	volume    = "2404.07220v2",
+	year      = "2024",
+	note      = "[cs.IR]",
+	publisher = "IBM",
+	month     = "August 4",
+	url       = "https://arxiv.org/abs/2404.07220"
+}
+
+
+@article{ding2024efficient,
+	title="Efficient Retrieval with Learned Similarities",
+	author="Ding, Bailu and Zhai, Jiaqi",
+	journal="arXiv preprint arXiv:2407.15462",
+	year="2024",
+	volume="2",
+	note="arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
+}
+%% book, authored
+@book{bib4,
+	author		= "Geddes, K. O. and Czapor, S. R. and Labahn, G.",
+	title			= "Algorithms for {C}omputer {A}lgebra",
+	address		= "Boston",
+	publisher		= "Kluwer",
+	year			= "1992"
 }
 
 %% Book, edited
